# battleship

./: CMakeLists.txt
include/DataStructures/: bases.h
include/Game/: actions.h  board.h  checks.h  interface.h  map.h  ship.h
src/: main.c
src/DataStructures/: bases.c
src/Game/: actions.c  board.c  checks.c  interface.c  map.c  ship.c
